--- a/rsync-ssl/config.yaml
+++ b/rsync-ssl/config.yaml
@@ -26,4 +26,4 @@ schema:
   rsync_password: password
   cron_datetime: str
   cron_loglevel: int
-image: "ghcr.io/dmitriysafronov/home-assistant-addons/{arch}-rsync-ssl"
+image: "ghcr.io/dmitriysafronov/home-assistant-addons/rsync-ssl"
