--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -65,6 +65,9 @@ jobs:
       matrix:
         addon: ${{ fromJson(needs.init.outputs.changed_addons) }}
         arch: ["aarch64", "amd64", "armhf", "armv7", "i386"]
+    permissions:
+      packages: write
+      contents: read
 
     steps:
       - name: Check out repository
