fix access rights

--- a/rsync-ssl/Dockerfile
+++ b/rsync-ssl/Dockerfile
@@ -9,4 +9,11 @@ RUN \
     rsync
 
 # Copy root filesystem
-COPY rootfs /
+COPY rootfs/ /
+
+# Change access rights
+RUN \
+  chmod -C a+x \
+    /usr/bin/ssl-refresher \
+    /etc/services.d/rsync-ssl/finish \
+    /etc/services.d/rsync-ssl/run
